--- a/css/style.css
+++ b/css/style.css
@@ -218,7 +218,7 @@ border-top: 30px solid White;
 /*---------------About me----------------*/
 
 #aboutme{
-	padding: 100px;
+	padding: 50px;
 }
 
 #aboutme h1, p{
@@ -267,7 +267,7 @@ border-top: 30px solid White;
 }
 
 
-.education h2{
+.education h1{
 	margin-left: 20px;;
 }
 /*-------------------------------------*/
@@ -276,6 +276,10 @@ border-top: 30px solid White;
 .working{
 	display: inline-block;
 	vertical-align:middle;
+}
+
+.working h1{
+	margin-left:170px;
 }
 
 #working{
@@ -489,14 +493,17 @@ border-top: 30px solid White;
 		margin-bottom: 50px;
 	}
 
+	#profile span{
+		margin-top: 0px;
+	}
+
 	.buttonWorks{
 		margin-left: auto;
 		margin-right: auto;
 	}
 
 .IndexPage{
-	height: 130vh;
-
+	height: 110vh;
 }
 
 	.education{
@@ -507,7 +514,7 @@ border-top: 30px solid White;
 		margin-left: 30px;
 	}
 
-	.education h2{
+	.education h1{
 		font-weight: bold;
 		margin-top: 20px;
 		margin-left: 50px;
@@ -520,7 +527,10 @@ border-top: 30px solid White;
 		display: block;
  	}
 
-
+	.working h1{
+		margin-top: 20px;
+		margin-left: 50px;
+	}
 
 
  	.working{
